tests/parser/parse-while.1.bad.error
error: Malformed while expression
  --> test:4:17
   |
 4 |  (define f (while))
   |                  ^ expected condition
